@@ -1,3 +1,14 @@
+2009-12-03  Alexey Proskuryakov  <ap@apple.com>
+
+        Reviewed by Eric Seidel.
+
+        https://bugs.webkit.org/show_bug.cgi?id=32130
+        Add a test for sending non-trivial amount of data over WebSocket
+
+        * websocket/tests/echo_wsh.py: Copied from WebKitTools/pywebsocket/example/echo_wsh.py.
+        * websocket/tests/simple-stress-expected.txt: Added.
+        * websocket/tests/simple-stress.html: Added.
+
 2009-12-03  Brady Eidson  <beidson@apple.com>
 
         Rubberstamped by Sam Weinig.
